--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-sass": "^3.1.0",
+    "howler": "^2.0.4",
     "stringify": "^5.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
