--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "howler": "^2.0.4",
     "stringify": "^5.1.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "web-audio-api": "^0.2.2"
   }
 }
